@@ -682,15 +682,15 @@ begin
     end
     
     def test_should_use_ellipse_shape
-      assert_equal 'ellipse', @node['shape']
+      assert_equal 'ellipse', @node['shape'].to_s.gsub('"', '')
     end
     
     def test_should_set_width_to_one
-      assert_equal '1', @node['width']
+      assert_equal '1', @node['width'].to_s.gsub('"', '')
     end
     
     def test_should_set_height_to_one
-      assert_equal '1', @node['height']
+      assert_equal '1', @node['height'].to_s.gsub('"', '')
     end
     
     def test_should_use_stringified_name_as_name
@@ -698,7 +698,7 @@ begin
     end
     
     def test_should_use_description_as_label
-      assert_equal 'parked (1)', @node['label']
+      assert_equal 'parked (1)', @node['label'].to_s.gsub('"', '')
     end
   end
   
@@ -715,7 +715,7 @@ begin
     end
     
     def test_should_use_ellipse_as_shape
-      assert_equal 'ellipse', @node['shape']
+      assert_equal 'ellipse', @node['shape'].to_s.gsub('"', '')
     end
     
     def test_should_draw_edge_between_point_and_state
@@ -738,7 +738,7 @@ begin
     end
     
     def test_should_use_description_as_label
-      assert_equal 'nil', @node['label']
+      assert_equal 'nil', @node['label'].to_s.gsub('"', '')
     end
   end
   
@@ -756,7 +756,7 @@ begin
     end
     
     def test_should_use_description_as_label
-      assert_equal 'parked (*)', @node['label']
+      assert_equal 'parked (*)', @node['label'].to_s.gsub('"', '')
     end
   end
   
@@ -773,7 +773,7 @@ begin
     end
     
     def test_should_use_ellipse_as_shape
-      assert_equal 'ellipse', @node['shape']
+      assert_equal 'ellipse', @node['shape'].to_s.gsub('"', '')
     end
   end
   
@@ -787,7 +787,7 @@ begin
     end
     
     def test_should_use_doublecircle_as_shape
-      assert_equal 'doublecircle', @node['shape']
+      assert_equal 'doublecircle', @node['shape'].to_s.gsub('"', '')
     end
   end
 rescue LoadError
