@@ -1,5 +1,6 @@
 == master
 
+* Fix deprecation warnings for ruby-graphviz 0.9.0+
 * Add support for ActiveRecord 2.0.*
 * Fix nil states being overwritten when they're explicitly set in ORM integrations
 * Fix default states not getting set in ORM integrations if the column has a default
